--- a/css/style11.css
+++ b/css/style11.css
@@ -389,7 +389,7 @@ html {
 		display: flex;
 		flex-direction: column;
 		justify-content: space-around;
-		top: 100px;
+		top: 80px;
 		left: 0;
 		bottom: 0;
 		right: 0;
